--- a/CSS/boots.css
+++ b/CSS/boots.css
@@ -9,7 +9,7 @@ html, body{
 }
 
 .padding{
-    padding:80px 0;
+    padding: 60px 0;
 }
 
 .landing-text .row img{
@@ -23,14 +23,6 @@ html, body{
     -o-border-radius: 40%;
 }
 
-#intro {
-    background: url(../Images/bg.jpg) no-repeat center center fixed;
-    display: table;
-    height: 100%;
-    position: relative;
-    width: 100%;
-    background-size: cover;
-}
 .landing-text{
     display: table-cell;
     text-align: center;
@@ -38,15 +30,15 @@ html, body{
 }
 #welcome{
     font-size: 4em;
-    color: orange;
+    color: #e24287;
 }
 #welcome2{
     font-size: 2em;
     color: white;
 }
 
-#fixed, #home, #resume{
-    background: url(../Images/bg.jpg) no-repeat center center fixed;
+#fixed, #home, #resume, #intro, #skills{
+    background: url(../Images/simple\ bg.jpg) no-repeat center center fixed;
     display: table;
     height: 100%;
     position: relative;
@@ -61,12 +53,20 @@ html, body{
     padding: 10px;
 }
 
-footer{
-    width:100%;
-    background-color: rgb(78, 77, 77);
-    padding: 5% 5% 10% 5%;
-    color:white;
+#contresume{
+    justify-content: center;
 }
+
+#scrollup{
+    position: fixed;
+    bottom: 30px;
+    right:30px;
+    z-index: 9;
+}
+.card-img-top{
+    height:200px;
+}
+
 .fa-brands{
     padding: 15px;
     font-size: 25px;
@@ -76,25 +76,4 @@ footer{
 .fa-brands:hover{
     color:rgb(138, 138, 156);
     text-decoration: none;
-}
-#contresume{
-    justify-content: center;
-
-}
-#skills{
-    background: url(../Images/bg.jpg) no-repeat center center fixed;
-    display: table;
-    height: 100%;
-    position: relative;
-    width: 100%;
-    background-size: cover;
-}
-#scrollup{
-    position: fixed;
-    bottom: 30px;
-    right:30px;
-    z-index: 9;
-}
-.card-img-top{
-    height:200px;
 }
